# SUPG_div_free_implicit_ROM

./: .gitignore  README.md  pyproject.toml
apps/: convergence_divergence_ic.py  convergence_test.py  kernels.ipynb  load_and_plot.ipynb  perturbation_plot.py  plot_IC.py  plot_RP4.py  plot_kernels.py  test.ipynb  test_DeC_implicit_solver.ipynb  test_OSS_curl_stab.py  test_SUPG.ipynb  test_SUPG.py  test_SUPG_MOR.py  test_coriolis_initialization.ipynb  test_curl.ipynb  test_curl.py  test_div_free.py  test_div_free_ic.ipynb  test_implicit_matrix.ipynb  test_implicit_solver.ipynb  testing.py
gfsupg/: MOR.py  Maxwell_GLM_problem.py  Maxwell_problem.py  plotting.py  problem.py  problem2.py  quadr.py  solver.py  time_integrators.py
slides/: MOR.html  MOR.md
